--- a/style.css
+++ b/style.css
@@ -2,19 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-/* html,
-body {
-  position: relative;
-  height: 100%;
-} */
+/* roboto font */
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 .swiper {
@@ -24,8 +17,6 @@ body {
 }
 
 .swiper-slide {
-  font-size: 18px;
-  color: #fff;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 40px 60px;
@@ -42,17 +33,6 @@ body {
   background-position: center;
 }
 
-.swiper-slide .title {
-  font-size: 41px;
-  font-weight: 300;
-}
-
-.swiper-slide .subtitle {
-  font-size: 21px;
-}
-
-.swiper-slide .text {
-  font-size: 14px;
-  max-width: 400px;
-  line-height: 1.3;
+.swiper-pagination-bullet-active {
+  background-color: #059669 !important;
 }
