--- a/style.css
+++ b/style.css
@@ -36,3 +36,7 @@ body {
 .swiper-pagination-bullet-active {
   background-color: #059669 !important;
 }
+.swiper-button-next,
+.swiper-button-prev {
+  display: none !important;
+}
