nav mobile done

--- a/style.css
+++ b/style.css
@@ -10,59 +10,105 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-/* navbar */
-
-.topnav {
-  overflow: hidden;
+/* nav */
+* {
+  box-sizing: border-box;
 }
 
-.topnav a {
-  float: left;
-  display: block;
-  /* color: #f2f2f2; */
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+body {
+  margin: 0px;
+  font-family: "segoe ui";
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+.nav {
+  height: 50px;
+  width: 100%;
+  /* background-color: #4d4d4d; */
+  position: relative;
+  z-index: 99;
 }
 
-.topnav a.active {
-  background-color: #04aa6d;
-  color: white;
+.nav > .nav-header {
+  display: inline;
 }
 
-.topnav .icon {
+.nav > .nav-header > .nav-title {
+  display: inline-block;
+  font-size: 22px;
+  color: #fff;
+  padding: 10px 10px 10px 10px;
+}
+
+.nav > .nav-btn {
   display: none;
 }
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
+.nav > .nav-links {
+  display: inline;
+  float: right;
+  font-size: 18px;
 }
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive .icon {
+.nav > .nav-links > a {
+  display: inline-block;
+  padding: 13px 10px 13px 10px;
+  text-decoration: none;
+  /* color: #efefef; */
+}
+
+.nav > .nav-links > a:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.nav > #nav-check {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .nav > .nav-btn {
+    display: inline-block;
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 0px;
+    top: 0px;
   }
-  .topnav.responsive a {
-    float: none;
+  .nav > .nav-btn > label {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    padding: 13px;
+  }
+  .nav > .nav-btn > label:hover,
+  .nav #nav-check:checked ~ .nav-btn > label {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  .nav > .nav-btn > label > span {
     display: block;
-    text-align: left;
+    width: 25px;
+    height: 10px;
+    border-top: 2px solid black;
+  }
+  .nav > .nav-links {
+    position: absolute;
+    display: block;
+    width: 100%;
+    background-color: teal;
+    height: 0px;
+    transition: all 0.3s ease-in;
+    overflow-y: hidden;
+    top: 50px;
+    left: -50px;
+  }
+  .nav > .nav-links > a {
+    display: block;
+    width: 100%;
+  }
+  .nav > #nav-check:not(:checked) ~ .nav-links {
+    height: 0px;
+  }
+  .nav > #nav-check:checked ~ .nav-links {
+    /* height: calc(100vh - 50px); */
+    height: 300px;
+    overflow-y: auto;
   }
 }
 /* slider */
