form work in process

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 :root {
   --primary-color: #059669;
+  --secondary-color: #f97316;
 }
 
 body {
@@ -171,4 +172,10 @@ body {
 .swiper-button-next,
 .swiper-button-prev {
   display: none !important;
+}
+
+/* form */
+
+.tab:checked {
+  background-color: var(--secondary-color) !important;
 }
