--- a/style-custom.css
+++ b/style-custom.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root {
-  --primary-color: #21c189;
+  --primary-color: #aff1dc;
   --secondary-color: #ff8900;
 }
 
@@ -139,7 +139,7 @@ body {
 .swiper {
   width: 100%;
   height: 100%;
-  background: #000;
+  background: var(--primary-color);
 }
 
 .swiper-slide {
@@ -163,7 +163,7 @@ body {
   height: 15px;
 }
 .swiper-pagination-bullet-active {
-  background-color: var(--primary-color) !important;
+  background-color: var(--secondary-color) !important;
 }
 .swiper-button-next,
 .swiper-button-prev {
