upto form works

--- a/style-custom.css
+++ b/style-custom.css
@@ -2,6 +2,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+/* colors */
+
 :root {
   --primary-color: #aff1dc;
   --primary-color-dark: #21c189;
@@ -21,6 +23,17 @@
 .text-primary-color-dark {
   color: var(--primary-color-dark);
 }
+
+.bg-primary-color-dark {
+  background-color: var(--primary-color-dark);
+}
+
+.text-secondary-color {
+  color: var(--secondary-color);
+}
+
+/* colors end */
+
 body {
   font-family: "Roboto", sans-serif !important;
 }
@@ -153,7 +166,7 @@ body {
 .swiper {
   width: 100%;
   height: 100%;
-  background: var(--primary-color);
+  /* background: var(--primary-color); */
 }
 
 .swiper-slide {
