--- a/style-custom.css
+++ b/style-custom.css
@@ -184,14 +184,13 @@ body {
 
 .swiper-slide.swiper2 {
   background-color: white !important;
-  /* padding: 5px !important; */
 }
 
 .swiper-slide.swiper2 img {
-  display: block;
+  /* display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: cover; */
 }
 
 /* form */
