--- a/style-custom.css
+++ b/style-custom.css
@@ -121,10 +121,7 @@ body {
     height: 50px;
     padding: 13px;
   }
-  /* .nav > .nav-btn > label:hover,
-  .nav #nav-check:checked ~ .nav-btn > label {
-    background-color: rgba(0, 0, 0, 0.3);
-  } */
+
   .nav > .nav-btn > label > span {
     display: block;
     width: 25px;
@@ -186,12 +183,12 @@ body {
   background-color: white !important;
 }
 
-.swiper-slide.swiper2 img {
-  /* display: block;
+/* .swiper-slide.swiper2 img {
+  display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover; */
-}
+  object-fit: cover;
+} */
 
 /* form */
 
