--- a/style-custom.css
+++ b/style-custom.css
@@ -183,12 +183,15 @@ body {
   background-color: white !important;
 }
 
-/* .swiper-slide.swiper2 img {
+.swiper-slide.swiper2 .swiper-img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
-} */
+}
+.swiper-pagination-bullet {
+  margin-bottom: -12px !important;
+}
 
 /* form */
 
