--- a/style-custom.css
+++ b/style-custom.css
@@ -172,8 +172,8 @@ body {
 .swiper-pagination-bullet-active {
   background-color: var(--primary-color-dark) !important;
 }
-.swiper-button-next,
-.swiper-button-prev {
+.mySwiper > .swiper-button-next,
+.mySwiper > .swiper-button-prev {
   display: none !important;
 }
 
