--- a/style-custom.css
+++ b/style-custom.css
@@ -232,3 +232,23 @@ body {
 .tab:checked {
   background-color: var(--secondary-color) !important;
 }
+
+/* about section */
+
+.about-section-images {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto 1fr;
+  justify-items: stretch;
+  align-items: end;
+}
+.about-image-1 {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.about-image-2 {
+  grid-column: 2/3;
+  grid-row: 1/3;
+  /* align-self: start; */
+  transform: translateX(50%);
+}
