--- a/style-custom.css
+++ b/style-custom.css
@@ -238,17 +238,16 @@ body {
 .about-section-images {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto 1fr;
+  grid-auto-rows: minmax(100px, auto);
   justify-items: stretch;
   align-items: end;
 }
 .about-image-1 {
-  grid-column: 2/3;
-  grid-row: 1/2;
+  grid-column: 1/3;
+  grid-row: 1;
+  justify-self: center;
 }
 .about-image-2 {
-  grid-column: 2/3;
-  grid-row: 1/3;
-  /* align-self: start; */
-  transform: translateX(50%);
+  grid-column: 2/4;
+  grid-row: 1;
 }
