--- a/style-custom.css
+++ b/style-custom.css
@@ -183,7 +183,7 @@ body {
   display: none !important;
 }
 
-/* second swiper  */
+/* second swiper Popular Destinations */
 
 .swiper-slide.swiper2 {
   background-color: white !important;
@@ -256,4 +256,9 @@ body {
 .about-image-2 {
   grid-column: 2/4;
   grid-row: 1;
+}
+
+/* third swiper top Destinations */
+.svg-icon {
+  color: yellow;
 }
