--- a/style-custom.css
+++ b/style-custom.css
@@ -189,7 +189,8 @@ body {
   background-color: white !important;
 }
 
-.swiper-slide.swiper2 .swiper-img {
+.swiper-slide.swiper2 .swiper-img,
+.swiper-slide.swiper3 .swiper-img {
   display: block;
   width: 100%;
   height: 100%;
@@ -259,8 +260,8 @@ body {
 }
 
 /* third swiper top Destinations */
-.swiper-button-next.swiper3:hover,
-.swiper-button-prev.swiper3:hover {
+.swiper3-button-next:hover,
+.swiper3-button-prev:hover {
   background-color: var(--primary-color-dark);
   transition-property: all;
   transition-duration: 700ms;
